Make frontend hostable (config override) and fix API URL for /ui

--- a/frontend/employee/index.html
+++ b/frontend/employee/index.html
@@ -92,6 +92,7 @@
 		<iframe id="emsLandingFrame" title="Landing" src="furrow-index.html"></iframe>
 	</div>
 	<div id="emsApp">
+    <script src="config.js"></script>
 	<div class="theme-toggle">
         <input id="themeToggle" type="checkbox" class="theme-switch switch" aria-label="Toggle dark mode">
 	</div>
