--- a/frontend/employee/login.html
+++ b/frontend/employee/login.html
@@ -91,6 +91,7 @@
         </div>
     </div>
 
+    <script src="config.js"></script>
     <script src="login-page.js?v=20251227"></script>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 </body>
